--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# ignore common script for different pypi
+whisper/neo_whisper/nn_utils.py
+whisper/neo_whisper/common.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
